--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <nav>
           <ul class="nav-menu">
             <li><a href="#inicio">Inicio</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="/servicios.html">Servicios</a></li>
             <li><a href="#nosotros">Nosotros</a></li>
             <li><a href="#contacto">Contacto</a></li>
-            <li><a href="inicio_sesion.html">Inico sesión</a></li>
+            <li><a href="/inicio_sesion.html">Inico sesión</a></li>
             <li>
               <a href="#" class="btn-solicitar" onclick="solicitarAsesoria()"
                 >Solicitar asesoría</a
