--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -58,7 +58,7 @@
 
         <div class="links">
           <a href="#" class="link">¿Olvidaste tu contraseña?</a>
-          <a href="index.html" class="link">Volver al inicio</a>
+          <a href="/index.html" class="link">Volver al inicio</a>
         </div>
       </form>
     </div>
