--- a/servicio.html
+++ b/servicio.html
@@ -25,9 +25,9 @@
         </div>
         <nav>
           <ul class="nav-menu">
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/index.html">Inicio</a></li>
             <li>
-              <a href="servicios.html" onclick="navigateTo('servicios')"
+              <a href="/servicios.html" onclick="navigateTo('servicios')"
                 >Servicios</a
               >
             </li>
