--- a/Servicios.html
+++ b/Servicios.html
@@ -26,9 +26,11 @@
         </div>
         <nav>
           <ul class="nav-menu">
-            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="/Proyecto_TecnoRed/index.html">Inicio</a></li>
             <li>
-              <a href="/servicios.html" onclick="navigateTo('servicios')"
+              <a
+                href="/Proyecto_TecnoRed/servicios.html"
+                onclick="navigateTo('servicios')"
                 >Servicios</a
               >
             </li>
