--- a/Gestion_servicios.html
+++ b/Gestion_servicios.html
@@ -29,8 +29,8 @@
         </div>
         <nav>
           <ul class="nav-menu">
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/servicios.html">Servicios</a></li>
+            <li><a href="/Proyecto_TecnoRed/index.html">Inicio</a></li>
+            <li><a href="/Proyecto_TecnoRed/servicios.html">Servicios</a></li>
             <li>
               <a href="#" class="btn-solicitar" onclick="solicitarAsesoria()"
                 >Solicitar asesoría</a
