--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <nav>
           <ul class="nav-menu">
             <li><a href="#inicio">Inicio</a></li>
-            <li><a href="/Proyecto_TecnoRed/servicios.html">Servicios</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
             <li><a href="#nosotros">Nosotros</a></li>
             <li><a href="#contacto">Contacto</a></li>
             <li>
-              <a href="/Proyecto_TecnoRed/inicio_sesion.html">Inico sesión</a>
+              <a href="inicio_sesion.html">Inico sesión</a>
             </li>
             <li>
               <a href="#" class="btn-solicitar" onclick="solicitarAsesoria()"
