Actualiza_pagina_servicio

--- a/servicio.html
+++ b/servicio.html
@@ -67,7 +67,7 @@
         alert(
           "¡Gracias por tu interés! Te contactaremos pronto para iniciar tu proyecto de seguridad informática."
         );
-        window.location.href = "Gestion_servicios.html";
+        window.location.href = "gestion_servicios.html";
       }
 
       // Add smooth scrolling for navigation links
